--- a/rest/api/views/swaggerui/index.html
+++ b/rest/api/views/swaggerui/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Swagger UI</title>
-  <link href="css/swagger-ui.css" rel="stylesheet" type="text/css">
-  <link href="img/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
-  <link href="img/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
+  <link href="resources/swagger-ui.css" rel="stylesheet" type="text/css">
+  <link href="resources/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
+  <link href="resources/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
   <style>
     html {
       box-sizing: border-box;
@@ -30,8 +30,8 @@
 <body>
 <div id="swagger-ui"></div>
 
-<script charset="UTF-8" src="js/swagger-ui-bundle.js"></script>
-<script charset="UTF-8" src="js/swagger-ui-standalone-preset.js"></script>
+<script charset="UTF-8" src="resources/swagger-ui-bundle.js"></script>
+<script charset="UTF-8" src="resources/swagger-ui-standalone-preset.js"></script>
 <script>
   window.onload = function () {
     // Begin Swagger UI call region
